--- a/Jpa-demo/src/main/resources/application.properties
+++ b/Jpa-demo/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 # create>> replace the structure>> DDL,DCL
 # update>> append>> DML, DQL
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
