--- a/Microservices/customer-service/src/main/resources/application.properties
+++ b/Microservices/customer-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql: true
 # create>> replace the structure>> DDL,DCL
 # update>> append>> DML, DQL
 spring.jpa.hibernate.ddl-auto=update
+
+# register into discovery
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
