--- a/Microservices/api-gateway/src/main/resources/application.yml
+++ b/Microservices/api-gateway/src/main/resources/application.yml
@@ -10,10 +10,12 @@ spring:
           uri: lb://ACCOUNT-SERVICE
           predicates:
             - Path=/account/**
+          filters:
+            - JwtTokenFilter
         - id: CUSTOMER-SERVICE
           uri: lb://CUSTOMER-SERVICE
           predicates:
-            - Path=/customer/**
+            - Path=/auth/**
 
 eureka:
   client:
