random at gateway

--- a/Microservices/api-gateway/src/main/resources/application.yml
+++ b/Microservices/api-gateway/src/main/resources/application.yml
@@ -10,12 +10,10 @@ spring:
           uri: lb://ACCOUNT-SERVICE
           predicates:
             - Path=/account/**
-          filters:
-            - JwtTokenFilter
         - id: CUSTOMER-SERVICE
           uri: lb://CUSTOMER-SERVICE
           predicates:
-            - Path=/auth/**
+            - Path=/customer/**
 
 eureka:
   client:
