security dependency removed from gateway, also login verified via gateway

--- a/Microservices/api-gateway/src/main/resources/application.yml
+++ b/Microservices/api-gateway/src/main/resources/application.yml
@@ -6,6 +6,10 @@ spring:
   cloud:
     gateway:
       routes:
+        - id: AUTH-SERVICE
+          uri: lb://AUTH-SERVICE
+          predicates:
+            - Path=/auth/**
         - id: ACCOUNT-SERVICE
           uri: lb://ACCOUNT-SERVICE
           predicates:
