jwt token validation done at gateway of microservice

--- a/Microservices/api-gateway/src/main/resources/application.yml
+++ b/Microservices/api-gateway/src/main/resources/application.yml
@@ -14,10 +14,14 @@ spring:
           uri: lb://ACCOUNT-SERVICE
           predicates:
             - Path=/account/**
+          filters:
+            - MyAuthenticationFilter
         - id: CUSTOMER-SERVICE
           uri: lb://CUSTOMER-SERVICE
           predicates:
             - Path=/customer/**
+          filters:
+            - MyAuthenticationFilter
 
 eureka:
   client:
